# GeoTeach_RAG

./: .dockerignore  .env.example  .gitignore  .railwayignore  DEPLOY.md  Dockerfile  FIX_LOG.md  README.md  TECHNICAL_DOCS.md  TEST_LOG.md  app.py  config.py  docker-compose.yml  document_processor.py  health_check.py  launcher.py  opencode.json  pyproject.toml  rag_chain.py  railway.toml  requirements.txt  review_files.py  run.py  start.py  start_services.bat  sync_files.py  test_server.py  test_upload.py  vector_store.py
config/: .env.example  __init__.py  categories.json  config.json  pointer.py  settings.py  textbook_catalog.json  version.py
config/catalog/junior/: pep.json
config/catalog/senior/: pep.json
config/templates/: lecture_draft.json  lesson_plan.json  speech_draft.json  study_plan.json
core/: __init__.py  agent.py  api.py  async_utils.py  cache.py  chunking.py  database.py  document.py  evaluator.py  generator.py  image_extractor.py  maintenance.py  multimodal.py  ocr.py  scheduler.py  utils.py  vision.py  web_crawler.py
data/: README.md  test_chunk.txt  test_doc.txt
data/cache/: embedding_cache.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: MarkdownRenderer.vue  Navbar.vue
frontend/src/composables/: useWebSocket.js
frontend/src/router/: index.js
frontend/src/styles/: main.css
frontend/src/views/: Config.vue  Documents.vue  Generator.vue  Home.vue  (+6 more)
servers/: __init__.py  embedding.py  mcp.py  rerank.py  web.py
