[project]
name = "geoteach-agent"
version = "1.4.0"
description = "GeoTeach RAG - 地理教学AI助手（Milvus版本）"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "unstructured>=0.14.0",
    "python-docx>=1.2.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
